small text edit and upcoming photos page

--- a/index.html
+++ b/index.html
@@ -91,14 +91,16 @@
       <img src="src/images/AGC-camo.png" class="w3-round w3-image" alt="Camo Patterns" width="100%" height="auto">
     </div>
   </div>
-  <ul>
-    <li>Natural Environment Matching Fractal Patterns Customizable to Any Environment (Broad or Specific) - No Guesswork</li>
-    <li>Commercial/Hunting Variations - Urban/Alpine/Mountain/Desert/Jungle/ Field, etc.</li>
-    <li>Law Enforcement/Military Capable Variations</li>
-    <li>Very Aesthetically Appealing for Marketability</li>
-    <li>Simultaneously Reduces Contrast in Low Light Environments and Daylight Environments Across a Broad Spectral Region</li>
-    <li>Streetwear, Swimwear, Ski/Snowboard Wear, etc.</li>
-  </ul>
+  <div>
+    <ul>
+      <li>Natural Environment Matching Fractal Patterns Customizable to Any Environment (Broad or Specific) - No Guesswork</li>
+      <li>Commercial/Hunting Variations - Urban/Alpine/Mountain/Desert/Jungle/ Field, etc.</li>
+      <li>Law Enforcement/Military Capable Variations</li>
+      <li>Very Aesthetically Appealing for Marketability</li>
+      <li>Simultaneously Reduces Contrast in Low Light Environments and Daylight Environments Across a Broad Spectral Region</li>
+      <li>Streetwear, Swimwear, Ski/Snowboard Wear, etc.</li>
+    </ul>
+  </div>
 </div>
 
 
@@ -116,14 +118,14 @@
         <img src="src/images/robert.jpg" alt="Robert Reitz" class="profile-image">
         <h3>Robert Reitz</h3>
         <h5>Chief Operations Officer</h5>
-        <p> SEAL (Retired)<br>Business Development</p>
+        <p> Business Development<br>SEAL (Retired)</p>
       </div>
       <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
         <img src="src/images/jeff.jpg" alt="Jeff Laurell" class="profile-image">
         <h3>Jeff Laurell</h3>
         <h5>President</h5>
-        <p>Business Development<br>Avid Hunter & Outdoorsman</p>
+        <p>Camo Designer<br>Business Development<br>Avid Hunter & Outdoorsman</p>
       </div>
       <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
@@ -192,17 +194,22 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off w3-hide-small w3-hide-medium">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p class="w3-center">
-    PROTECTED UNDER U.S. COPYRIGHT LAW &copy;
-  </p>
-</footer>
-<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off w3-hide-large">
-  <a href="#home" class="w3-button w3-light-grey" onclick="goTop()"><i class="fa fa-arrow-up w3-margin-right"></i> To the top</a>
-  <p class="w3-center">
-    PROTECTED UNDER U.S. COPYRIGHT LAW &copy;
-  </p>
+<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
+  <div class="w3-center w3-padding-large">
+    <p class="text-bold"> PHOTOS PAGE COMING SOON!</p>
+  </div>
+  <div class=" w3-hide-small w3-hide-medium">
+    <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <p class="w3-center">
+      PROTECTED UNDER U.S. COPYRIGHT LAW &copy;
+    </p>
+  </div>
+  <div class="w3-hide-large">
+    <a href="#home" class="w3-button w3-light-grey" onclick="goTop()"><i class="fa fa-arrow-up w3-margin-right"></i> To the top</a>
+    <p class="w3-center">
+      PROTECTED UNDER U.S. COPYRIGHT LAW &copy;
+    </p>
+  </div>
 </footer>
 
 
