--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </div>
 </div>
 <!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-32" style="max-width: 1200px; margin: 0 auto;">
+<div class="w3-content w3-container contact-padding" style="max-width: 1200px; margin: 0 auto;">
   <h3 class="w3-center">How Can Alpha Ghost Camouflage Benefit Your Business?</h3>
   <p> 
     Alpha Ghost Camouflage will be a perfect fit into any quality product brand in the hunting and tactical 
@@ -194,7 +194,7 @@
 
 
 <!-- Footer -->
-<footer class="w3-center w3-black w3-padding-32 w3-opacity w3-hover-opacity-off">
+<footer class="w3-center w3-black footer-padding w3-opacity w3-hover-opacity-off">
   <div class="w3-center w3-padding-large">
     <p class="text-bold"> PHOTOS PAGE COMING SOON!</p>
   </div>
