added photos page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <a href="#Camo" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-th w3-padding-small"></i> CAMO</a>
       <a href="#team" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-users w3-padding-small"></i> TEAM</a>
       <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-envelope w3-padding-small"></i> CONTACT</a>
+      <a href="photos.html" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-photo w3-padding-small"></i> PHOTOS</a>
     </div>
   </div>
   <!-- Navbar on small and medium screens -->
@@ -39,7 +40,8 @@
       <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-user w3-padding"></i>ABOUT</a>
       <a href="#Camo" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-th w3-padding"></i>CAMO</a>
       <a href="#team" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-users w3-padding"></i>TEAM</a>
-      <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-envelope w3-padding"></i>CONTACT</a>   
+      <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-envelope w3-padding"></i>CONTACT</a>
+      <a href="photos.html" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-photo w3-padding"></i>PHOTOS</a>  
     </div>
   </div>
 </div>
