attempt to fix photos not loading

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="#Camo" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-th w3-padding-small"></i> CAMO</a>
       <a href="#team" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-users w3-padding-small"></i> TEAM</a>
       <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-envelope w3-padding-small"></i> CONTACT</a>
-      <a href="src/photos.html" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-photo w3-padding-small"></i> PHOTOS</a>
+      <a href="/src/photos.html" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-photo w3-padding-small"></i> PHOTOS</a>
     </div>
   </div>
   <!-- Navbar on small and medium screens -->
