--- a/src/photos.html
+++ b/src/photos.html
@@ -132,7 +132,7 @@
 
     <footer class="w3-center w3-black footer-padding w3-opacity  w3-padding-large">
         <div class="logo-container">
-            <img src="./src/images/AGC-logo-alt-white.png" alt="Logo" class="logo">
+            <img src="../src/images/AGC-logo-alt-white.png" alt="Logo" class="logo">
         </div>
         <div class=" w3-hide-small w3-hide-medium w3-hover-opacity-off">
           <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
