added snow gear photos

--- a/src/photos.html
+++ b/src/photos.html
@@ -119,6 +119,35 @@
                     <img src="/src/images/trunks-blue.png" style="width:100%" onclick="onClick(this)" alt="Broad Shorts">
                 </div>
             </div>
+            <div class="w3-row-padding">
+                <div class="w3-quarter">
+                    <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+                <div class="w3-quarter">
+                    <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+                <div class="w3-quarter">
+                    <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+                <div class="w3-quarter">
+                    <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+            </div>
+            <div class="w3-row-padding">
+                <div class="w3-quarter">
+                    <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+                <div class="w3-quarter">
+                    <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+                <div class="w3-quarter">
+                    <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+                <div class="w3-quarter">
+                    <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                </div>
+            </div>
+            
             <div class="w3-row-padding w3-center" style=" margin-left:10%; margin-right:10%;">
                 <img src="/src/images/vehicle_wraps.png" style="width:100%;" onclick="onClick(this)" alt="Vehicle Wraps">
             </div>  
