fix snow pants label

--- a/src/photos.html
+++ b/src/photos.html
@@ -135,16 +135,16 @@
             </div>
             <div class="w3-row-padding">
                 <div class="w3-quarter">
-                    <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
                 </div>
                 <div class="w3-quarter">
-                    <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
                 </div>
                 <div class="w3-quarter">
-                    <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
                 </div>
                 <div class="w3-quarter">
-                    <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
                 </div>
             </div>
             
