--- a/src/photos.html
+++ b/src/photos.html
@@ -135,10 +135,10 @@
             </div>
             <div class="w3-row-padding">
                 <div class="w3-quarter">
-                    <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
+                    <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
                 </div>
                 <div class="w3-quarter">
-                    <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
+                    <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
                 </div>
                 <div class="w3-quarter">
                     <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
