fix board shorts typo

--- a/src/photos.html
+++ b/src/photos.html
@@ -110,13 +110,13 @@
             <!-- Photo grid (modal) -->
             <div class="w3-row-padding">
                 <div class="w3-third">
-                <img src="/src/images/trunks-black.png" style="width:100%" onclick="onClick(this)" alt="Broad Shorts">
+                <img src="/src/images/trunks-black.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
                 </div>
                 <div class="w3-third">
-                    <img src="/src/images/trunks-green.png" style="width:100%" onclick="onClick(this)" alt="Broad Shorts">
+                    <img src="/src/images/trunks-green.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
                 </div>
                 <div class="w3-third">
-                    <img src="/src/images/trunks-blue.png" style="width:100%" onclick="onClick(this)" alt="Broad Shorts">
+                    <img src="/src/images/trunks-blue.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
                 </div>
             </div>
             <div class="w3-row-padding">
