change layout of commercial section on small screens

--- a/src/photos.html
+++ b/src/photos.html
@@ -106,51 +106,103 @@
             </div>
         </div>
         <!-- (Commercial Photos Section) -->
-        <section id = "Commercial Photos" class="w3-container w3-padding-large" style="margin-left:15%; margin-right: 15%; margin-bottom: 32px;">
-            <!-- Photo grid (modal) -->
-            <div class="w3-row-padding">
-                <div class="w3-third">
-                <img src="/src/images/trunks-black.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+        <section id = "Commercial Photos" >
+            <div class="w3-container w3-padding-large w3-hide-small" style="margin-left:15%; margin-right: 15%; margin-bottom: 32px;">
+                <!-- Photo grid (modal) -->
+                <div class="w3-row-padding">
+                    <div class="w3-third">
+                    <img src="/src/images/trunks-black.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-third">
+                        <img src="/src/images/trunks-green.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-third">
+                        <img src="/src/images/trunks-blue.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
                 </div>
-                <div class="w3-third">
-                    <img src="/src/images/trunks-green.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                <div class="w3-row-padding">
+                    <div class="w3-quarter">
+                        <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    </div>
+                    <div class="w3-quarter">
+                        <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    </div>
+                    <div class="w3-quarter">
+                        <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    </div>
+                    <div class="w3-quarter">
+                        <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    </div>
                 </div>
-                <div class="w3-third">
-                    <img src="/src/images/trunks-blue.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                <div class="w3-row-padding">
+                    <div class="w3-quarter">
+                        <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    </div>
+                    <div class="w3-quarter">
+                        <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                    </div>
+                    <div class="w3-quarter">
+                        <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
+                    </div>
+                    <div class="w3-quarter">
+                        <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
+                    </div>
+                </div>
+                <div class="w3-row-padding w3-center" style=" margin-left:10%; margin-right:10%;">
+                    <img src="/src/images/vehicle_wraps.png" style="width:100%;" onclick="onClick(this)" alt="Vehicle Wraps">
                 </div>
             </div>
-            <div class="w3-row-padding">
-                <div class="w3-quarter">
-                    <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+
+            <div class="w3-container w3-padding-large w3-hide-large w3-hide-medium" style="margin-bottom: 32px;">
+                <div class="w3-row-padding" style="display: flex;">
+                    <div class="w3-third" style="display: flex; flex-direction: column;">
+                    <img src="/src/images/trunks-black.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-third" style="display: flex; flex-direction: column;">
+                        <img src="/src/images/trunks-green.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-third" style="display: flex; flex-direction: column;">
+                        <img src="/src/images/trunks-blue.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
                 </div>
-                <div class="w3-quarter">
-                    <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                <div class="w3-row-padding" style="display: flex;">
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                    <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                        <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
                 </div>
-                <div class="w3-quarter">
-                    <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                <div class="w3-row-padding" style="display: flex;">
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                    <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                        <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
                 </div>
-                <div class="w3-quarter">
-                    <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                <div class="w3-row-padding" style="display: flex;">
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                    <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                        <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                </div>
+                <div class="w3-row-padding" style="display: flex;">
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                    <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                        <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
+                </div>
+                <div class="w3-row-padding" style="display: flex;">
+                    <div class="w3-image" style="display: flex; flex-direction: column;">
+                    <img src="/src/images/vehicle_wraps.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    </div>
                 </div>
             </div>
-            <div class="w3-row-padding">
-                <div class="w3-quarter">
-                    <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
-                </div>
-                <div class="w3-quarter">
-                    <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
-                </div>
-                <div class="w3-quarter">
-                    <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
-                </div>
-                <div class="w3-quarter">
-                    <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
-                </div>
-            </div>
-            
-            <div class="w3-row-padding w3-center" style=" margin-left:10%; margin-right:10%;">
-                <img src="/src/images/vehicle_wraps.png" style="width:100%;" onclick="onClick(this)" alt="Vehicle Wraps">
-            </div>  
         </section>
 
         <!-- Modal for full size images on click-->
