fix labels on ski photos and swap tactical images

--- a/src/photos.html
+++ b/src/photos.html
@@ -94,8 +94,8 @@
                     <img src="/src/images/camo-demo.png" style="width:100%; flex: 1;" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PROTOTYPE MODEL UNIFORM">
                 </div>
                 <div class="w3-third" style="display: flex; flex-direction: column;">
-                    <img src="/src/images/camo-multicam.jpg" style="width:100%; height: 50%; flex: 1;" onclick="onClick(this)" alt="Near Infrared: ALPHA GHOST MOUNTAIN ARID vs. MULTICAM">
                     <img src="/src/images/camo-NIR.jpg" style="width:100%; height: 50%; margin-top:10px; flex: 1;" onclick="onClick(this)" alt="Near Infrared: ALPHA GHOST WOODLAND (left) and MOUNTAIN ARID (right)">
+                    <img src="/src/images/camo-multicam.jpg" style="width:100%; height: 50%; flex: 1;" onclick="onClick(this)" alt="Near Infrared: ALPHA GHOST MOUNTAIN ARID vs. MULTICAM">
                 </div>
             </div>
         </section>
@@ -122,30 +122,30 @@
                 </div>
                 <div class="w3-row-padding">
                     <div class="w3-quarter">
-                        <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                        <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
                     </div>
                     <div class="w3-quarter">
-                        <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                        <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
                     </div>
                     <div class="w3-quarter">
-                        <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                        <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
                     </div>
                     <div class="w3-quarter">
-                        <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                        <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
                     </div>
                 </div>
                 <div class="w3-row-padding">
                     <div class="w3-quarter">
-                        <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                        <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
                     </div>
                     <div class="w3-quarter">
-                        <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Snow Jacket">
+                        <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
                     </div>
                     <div class="w3-quarter">
-                        <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
+                        <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
                     </div>
                     <div class="w3-quarter">
-                        <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Snow Pants">
+                        <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
                     </div>
                 </div>
                 <div class="w3-row-padding w3-center" style=" margin-left:10%; margin-right:10%;">
@@ -167,34 +167,34 @@
                 </div>
                 <div class="w3-row-padding" style="display: flex;">
                     <div class="w3-half" style="display: flex; flex-direction: column;">
-                    <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    <img src="/src/images/jacket-desert.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
                     </div>
                     <div class="w3-half" style="display: flex; flex-direction: column;">
-                        <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
-                    </div>
-                </div>
-                <div class="w3-row-padding" style="display: flex;">
-                    <div class="w3-half" style="display: flex; flex-direction: column;">
-                    <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
-                    </div>
-                    <div class="w3-half" style="display: flex; flex-direction: column;">
-                        <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                        <img src="/src/images/pants-desert.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
                     </div>
                 </div>
                 <div class="w3-row-padding" style="display: flex;">
                     <div class="w3-half" style="display: flex; flex-direction: column;">
-                    <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    <img src="/src/images/jacket-field.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
                     </div>
                     <div class="w3-half" style="display: flex; flex-direction: column;">
-                        <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                        <img src="/src/images/pants-field.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
                     </div>
                 </div>
                 <div class="w3-row-padding" style="display: flex;">
                     <div class="w3-half" style="display: flex; flex-direction: column;">
-                    <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    <img src="/src/images/jacket-jungle.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
                     </div>
                     <div class="w3-half" style="display: flex; flex-direction: column;">
-                        <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                        <img src="/src/images/pants-jungle.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
+                    </div>
+                </div>
+                <div class="w3-row-padding" style="display: flex;">
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                    <img src="/src/images/jacket-urban.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Jacket">
+                    </div>
+                    <div class="w3-half" style="display: flex; flex-direction: column;">
+                        <img src="/src/images/pants-urban.png" style="width:100%" onclick="onClick(this)" alt="Ski/Snowboard Pants">
                     </div>
                 </div>
                 <div class="w3-row-padding" style="display: flex;">
