--- a/src/photos.html
+++ b/src/photos.html
@@ -208,7 +208,7 @@
         <!-- Modal for full size images on click-->
         <div id="modal01" class="w3-modal w3-black" style="padding-top:0;" onclick="this.style.display='none'">
             <span class="w3-button w3-black w3-xxlarge w3-display-topright">×</span>
-            <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64" style="width: 40vw; height: 100vh; ">
+            <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64" style="width: 80vw; height: 100vh; ">
                 <img id="img01" class="w3-image" style="max-width: 100%; max-height: 100%;">
                 <p id="caption"></p>
             </div>
@@ -255,6 +255,13 @@
     function onClick(element) {
         document.getElementById("img01").src = element.src;
         document.getElementById("modal01").style.display = "block";
+        var captionText = document.getElementById("caption");
+        captionText.innerHTML = element.alt;
+    }
+
+    function onClick2(element) {
+        document.getElementById("img01").src = element.src;
+        document.getElementById("modal02").style.display = "block";
         var captionText = document.getElementById("caption");
         captionText.innerHTML = element.alt;
     }
