--- a/src/photos.html
+++ b/src/photos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="src/images/AGLogo.png" type="image/x-icon">
     <title>Photos</title>
     <!-- External styles -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -199,7 +200,7 @@
                 </div>
                 <div class="w3-row-padding" style="display: flex;">
                     <div class="w3-image" style="display: flex; flex-direction: column;">
-                    <img src="/src/images/vehicle_wraps.png" style="width:100%" onclick="onClick(this)" alt="Board Shorts">
+                    <img src="/src/images/vehicle_wraps.png" style="width:100%" onclick="onClick(this)" alt="Vehicle Wraps">
                     </div>
                 </div>
             </div>
