--- a/src/photos.html
+++ b/src/photos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="src/images/AGLogo.png" type="image/x-icon">
+    <link rel="icon" href="/src/images/AGLogo.png" type="image/x-icon">
     <title>Photos</title>
     <!-- External styles -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
