changed photos logo and add 2 photos, change text in What is AGC section

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
   <h1 class="w3-center">
     <img src="src/images/AGLogo.png" class="w3-image w3-round" style="width:25%" alt="AGC-logo-transparent">
     <br>What is Alpha Ghost Camouflage?</h1>
-  <p>Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage 
+  <p class="w3-center"> Created by Alpha Dynamic Concepts (ADC) in the ecologically diverse Colorado Rockies, Alpha Ghost Camouflage 
     is a next generation system of interactive camouflage technology with optimal performance characteristics.
     Our patterns are scientifically designed to conceal in a wider range of distances and a broader spectrum of 
-    light conditions. The patterns used are fractal based and mimic nature at the elemental level.
+    light conditions, resulting in the capability to conceal in both high and low light environments, simultaneously.
   </p>
-  <p class="w3-center w3-padding-32">
+  <p class="w3-center w3-padding-16">
     Our team at Alpha Dynamic Concepts (ADC) has vastly expanded knowledge of the camouflage science through countless
     hours of cross-disciplinary applied research and development, using a creative, unconventional mindset.
     Our primary focus thus far has been directed towards military applications. ADC is now beginning to pursue
