--- a/src/photos.html
+++ b/src/photos.html
@@ -69,10 +69,12 @@
                 <div class="w3-half">
                 <img src="/src/images/hunting-1.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                 <img src="/src/images/hunting-2.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
+                <img src="/src/images/hunting-5.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                 </div>
                 <div class="w3-half">
                     <img src="/src/images/hunting-3.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                     <img src="/src/images/hunting-4.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
+                    <img src="/src/images/hunting-6.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                 </div>
             </div>  
         </section>
@@ -218,7 +220,7 @@
 
     <footer class="w3-center w3-black footer-padding w3-opacity  w3-padding-large">
         <div class="logo-container">
-            <img src="../src/images/AGC-logo-alt-white.png" alt="Logo" class="logo">
+            <img src="../src/images/AG-logo-alt.png" alt="Logo" class="logo">
         </div>
         <div class="click-to-enlarge">
             <p>CLICK TO ENLARGE IMAGES</p>
