--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
   <div class="w3-content w3-container">
     <div class="w3-row">
       <div class="w3-col m3 person-section">
-        <img src="src/images/robert.jpg" alt="Robert Reitz" class="profile-image">
+        <img src="src/images/profile-robert.jpg" alt="Robert Reitz" class="profile-image">
         <h3>Robert Reitz</h3>
         <h5>Chief Operations Officer</h5>
         <p> Business Development<br>SEAL (Retired)</p>
       </div>
       <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
-        <img src="src/images/jeff.jpg" alt="Jeff Laurell" class="profile-image">
+        <img src="src/images/profile-jeff.jpg" alt="Jeff Laurell" class="profile-image">
         <h3>Jeff Laurell</h3>
         <h5>President</h5>
         <p>Camo Designer<br>Business Development<br>Avid Hunter & Outdoorsman</p>
       </div>
       <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
-        <img src="src/images/colin.jpg" alt="Colin Ingram" class="profile-image">
+        <img src="src/images/profile-colin.jpg" alt="Colin Ingram" class="profile-image">
         <h3>Colin Ingram Ph.D.</h3>
         <h5>Chief Technical Officer</h5>
         <p>Biophysicist<br>Background in Optical Spectroscopies and Fluorescence Microscopy Techniques</p>
@@ -159,7 +159,7 @@
   <div class="w3-row w3-padding-32 w3-section">
     <!-- Left Image Column -->
     <div class="w3-col m3 w3-container">
-      <img src="src/images/AGLogo-v2-3.png" alt="AGC-logo" class="w3-image w3-round" style="width:100%">
+      <img src="src/images/AGLogo-v2.png" alt="AGC-logo" class="w3-image w3-round" style="width:100%">
     </div>
     <!-- Centered Form and Message Column -->
     <div class="w3-col m6 w3-panel w3-center">
