change jeffs photo and add 2 photos to photo page

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       </div>
       <div class="w3-col m1"><h3></h3></div>
       <div class="w3-col m3 person-section">
-        <img src="src/images/profile-jeff.jpg" alt="Jeff Laurell" class="profile-image">
+        <img src="src/images/profile-jeff_2.jpg" alt="Jeff Laurell" class="profile-image">
         <h3>Jeff Laurell</h3>
         <h5>President</h5>
         <p>Camo Designer<br>Business Development<br>Avid Hunter & Outdoorsman</p>
