--- a/src/photos.html
+++ b/src/photos.html
@@ -70,11 +70,13 @@
                 <img src="/src/images/hunting-1.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                 <img src="/src/images/hunting-2.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                 <img src="/src/images/hunting-5.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
+                <img src="/src/images/hunting-7.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                 </div>
                 <div class="w3-half">
                     <img src="/src/images/hunting-3.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                     <img src="/src/images/hunting-4.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                     <img src="/src/images/hunting-6.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
+                    <img src="/src/images/hunting-8.jpg" style="width:100%" onclick="onClick(this)" alt="ALPHA GHOST MOUNTAIN ARID PATTERN">
                 </div>
             </div>  
         </section>
